--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,8 @@ body {
 
 .square {
     float: left;
-    border: 1px solid grey;
+    border: 1px solid rgb(223, 223, 223);
     box-sizing: border-box;
-    margin-top: -1px;
-    margin-left: -1px;
+    /*margin-top: -1px;
+    margin-left: -1px;*/
 }
