--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,27 @@
 body {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100vw;
+    gap: 16px;
+}
+
+.content {
+    margin-right: 100px;
 }
 
 .grid-container {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.slide-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
 }
 
 .row {
